apps/base/syncthing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing
  labels:
    toolkit.fluxcd.io/tenant: dev-team
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
